--- a/.tmux.conf
+++ b/.tmux.conf
@@ -67,3 +67,10 @@ set-option -g allow-rename off
 
 # reload tmux conf
 bind-key r source-file ~/.tmux.conf
+
+#Mouse support
+setw -g mode-mouse on
+set -g mouse-select-pane on 
+set -g mouse-resize-pane on 
+set -g mouse-select-window on 
+
