--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,6 +4,7 @@ unbind-key C-b
 bind-key C-a send-prefix
 
 # colors
+set -g default-terminal "screen-256color"
 setw -g mode-bg black
 #set-option -g default-terminal "screen-256color" #"xterm-256color" # "screen-256color"
 #set-option -g pane-active-border-fg green
@@ -19,9 +20,9 @@ unbind [
 bind Escape copy-mode
 unbind p
 bind p paste-buffer
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'V' rectangle-toggle
-bind-key -t vi-copy 'y' copy-selection
+#bind-key -t vi-copy 'v' begin-selection
+#bind-key -t vi-copy 'V' rectangle-toggle
+#bind-key -t vi-copy 'y' copy-selection
 
 # Copy text between tmux and x
 #bind y run-shell "tmux show-buffer | xclip -sel clip -i" \; display-message "Copied tmux buffer to system clipboard"
@@ -39,7 +40,7 @@ set -g status-fg green
 
 set -g status-left-length 15
 set -g status-left '[ #(hostname | cut -d . -f 1) ]['
-#
+
 #set -g status-right '#[fg=yellow]%H:%M #(uptime | cut -d "," -f 2-)'
 #set -g status-right '][ %H:%M ]'
 
@@ -62,15 +63,7 @@ setw -g window-status-current-format '#[fg=white]( #I #W )'
 #set-window-option -g window-status-current-fg white
 
 # Automatically set window title
-#setw -g automatic-rename
 set-option -g allow-rename off
 
 # reload tmux conf
 bind-key r source-file ~/.tmux.conf
-
-#Mouse support
-setw -g mode-mouse on
-set -g mouse-select-pane on 
-set -g mouse-resize-pane on 
-set -g mouse-select-window on 
-
